# writing-habit

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  tracking-template.csv  writing-habit-mvp-design.org
assets/images/: LICENSE  NOTICE
docs/: api.md  cli.md  conf.py  dashboard.md  data-model.md  development.md  elisp-port-plan.org  index.md  installation.md  library.md  schedule-codes.md  table-file-naming-rules.org  tracking-formats.md  tutorial.md
docs/_diagrams/: architecture.dot
scripts/: make_tables.py
src/writing_habit/: __init__.py  cli.py  dashboard.py  db.py  models.py  name.py  plan_import.py
src/writing_habit/compare/: __init__.py  queries.py  report.py
src/writing_habit/track/: __init__.py  csv_actuals.py  ics_actuals.py  manual.py
templates/: 2gA-2gB-gW.org  2gAeA-2gBeB-gW.org  2gAsBBBsCCCsD-2gAsBBBsCCCsE-gWsBBBsCCC-sDDDsEEE.org  4gAeA-gW.org  4gAsBBBsCCC-sBBBsCCC.org  5gA.org  5gAA.org  5gAeA.org  5gAsA.org  gAABeAsA-gAABeBsB-gBBAeAsB-gBBAeBsW-gWsA-sAAA.org  gAABeAsA-gAABeBsB-gBBAeAsB-gBBAeBsW-gWsA.org  gAAeAsA-gAAeAsB-gBBeBsB-gBBeBsW-gWsA.org  gAeAsA-gAeAsB-gBeBsB-gBeBsW-gWW.org
tests/: test_dashboard.py  test_mvp_loop.py  test_name.py  test_schema.py
