[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "writing-habit"
version = "0.1.0"
description = "Track and compare planned versus actual academic writing effort, a companion to writing-schedule."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Blaine H. M. Mooers", email = "blaine-mooers@ou.edu"}]
keywords = ["writing", "habit", "scheduling", "time tracking", "N-of-1"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
# plan import calls the real writing-schedule parser. Until it is on PyPI,
# install it from its checkout: pip install -e <path>/writing-schedule-py/writing_schedule
plan = ["writing-schedule"]
ics = ["icalendar>=5"]
plot = ["matplotlib>=3.5"]
sheets = ["gspread>=5"]
dev = ["pytest>=7"]

[project.scripts]
writing-habit = "writing_habit.cli:main"

[project.urls]
Homepage = "https://github.com/MooersLab/writing-habit-py"
Documentation = "https://writing-habit-py.readthedocs.io/"
Repository = "https://github.com/MooersLab/writing-habit-py"
Issues = "https://github.com/MooersLab/writing-habit-py/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
writing_habit = ["schema.sql"]
